--- a/gateway.yml
+++ b/gateway.yml
@@ -2,9 +2,7 @@ server:
   port: 8400
 zuul:
   routes:
-    MyTest:
-      path: /myTest/**
-      serverId: test
+    test: /myTest/**
 management:
   endpoints:
     web:
