--- a/gateway.yml
+++ b/gateway.yml
@@ -8,6 +8,12 @@ management:
     web:
       exposure:
         include: ["routes"]
+
 feign:
   hystrix:
     enabled: true # 开启Feign熔断
+  client:
+    config:
+      default:
+        connectTimeout: 3000
+        readTimeout: 3000
