--- a/axle-dev.yml
+++ b/axle-dev.yml
@@ -1,3 +1,29 @@
 TEST:
   ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RandomRule
+
+server:
+  port: 8088
+
+spring:
+  application:
+    name: axle
+  cloud:
+    config:
+      discovery:
+        enabled: true
+        service-id: CONFIG
+      profile: dev
+  datasource:
+    url:  jdbc:mysql://47.101.141.93:3333/hbds2005-2?characterEncoding=utf8&useSSL=false&serverTimezone=UTC
+    username: root
+    password: admin
+    driver-class-name: com.mysql.jdbc.Driver
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+  devtools:
+    restart:
+      enabled: false
+      additional-paths: src/main/java
